--- a/src/css/TestDashboard/ViewPanel.css
+++ b/src/css/TestDashboard/ViewPanel.css
@@ -8,7 +8,7 @@
   background-color: rgb(87, 87, 87); /* this color is activated when the test image is blurred */
 }
 
-#ViewPanelImage {
+.ViewPanel-Image {
   height: 50vh;
   max-width: 100vw;
 }
